--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,8 +1,25 @@
 version: v1
+managed:
+  enabled: true
+  go_package_prefix:
+    default: github.com/timrxd/exhibit-backend/proto
+    except:
+      - buf.build/googleapis/googleapis
+      - buf.build/grpc-ecosystem/grpc-gateway
 plugins:
   - plugin: go
     out: proto
-    opt: paths=source_relative
+    opt:
+      - paths=source_relative
   - plugin: go-grpc
     out: proto
-    opt: paths=source_relative
+    opt:
+      - paths=source_relative
+      - require_unimplemented_servers=false
+  - plugin: grpc-gateway
+    out: proto
+    opt:
+      - paths=source_relative
+      - generate_unbound_methods=true
+  - plugin: openapiv2
+    out: openapi
